# Gen4IDs

./: .gitignore  .travis.yml  CMakeLists.txt  Dockerfile  Gen4IDs.pro  README.md  appveyor.yml  gen4ids.cpp  gen4ids.pro  gen4ids.sln  gen4ids.vcxproj  gen4ids.vcxproj.filters  main.cpp  stdafx.cpp
.ci/: after_build.sh  build.sh
.travis/: before_deploy.sh  file.sh  install.sh
Controls/: QTextBox.cpp  QTextBox.hpp
Core/: IDResult.cpp  IDResult.hpp  IDSearcher.cpp  IDSearcher.hpp
Forms/: MainWindow.cpp  MainWindow.hpp  MainWindow.ui
Forms/Controls/: TextBox.cpp  TextBox.hpp
Model/: IDModel.cpp  IDModel.hpp
